--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "SoulLyoko <519052532@qq.com>",
   "private": false,
   "license": "MIT",
-  "keywords": [],
   "main": "lib/index.umd.js",
+  "keywords": [],
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -15,11 +15,20 @@
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
     "lint": "eslint --ext .ts,.vue .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "fix": "vue-demi-fix"
   },
   "dependencies": {
-    "vue": "^3.2.20",
     "vue-demi": "^0.11.4"
+  },
+  "peerDependencies": {
+    "@vue/composition-api": "^1.2.4",
+    "vue": "^2.0.0 || >=3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@types/node": "^16.11.4",
@@ -33,10 +42,13 @@
     "eslint-plugin-vue": "^7.20.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.3",
+    "prettier": "^2.4.1",
     "typescript": "^4.4.4",
     "vite": "^2.6.10",
     "vitepress": "^0.20.0",
-    "vue-tsc": "^0.3.0"
+    "vue": "^3.2.20",
+    "vue-tsc": "^0.3.0",
+    "vue2": "npm:vue@2"
   },
   "lint-staged": {
     "*.{ts,vue}": [
