--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,12 @@
 .github
-.docs
+.husky
+docs
 node_modules
 public
 src
-eslintrc.js
+.eslintrc.js
 .gitignore
+.prettierrc.js
 index.html
 tsconfig.json
 vite.config.ts
