--- a/package.json
+++ b/package.json
@@ -3,26 +3,35 @@
   "version": "0.0.0",
   "description": "vite-lib-starter",
   "author": "SoulLyoko <519052532@qq.com>",
+  "repository": "https://github.com/SoulLyoko/vite-lib-starter.git",
+  "homepage": "https://github.com/SoulLyoko/vite-lib-starter#readme",
   "private": false,
   "license": "MIT",
   "main": "lib/index.umd.js",
-  "keywords": [],
+  "types": "lib/index.d.ts",
+  "keywords": [
+    "vite",
+    "starter"
+  ],
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run switch3 && vite",
+    "dev2": "npm run switch2 && vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs",
+    "docs:dev": "npm run switch3 && npm run cp && vitepress dev docs",
+    "docs:build": "npm run cp && vitepress build docs",
+    "docs:serve": "npm run cp && vitepress serve docs",
     "lint": "eslint --ext .ts,.vue .",
     "prepare": "husky install",
-    "fix": "vue-demi-fix"
+    "cp": "ncp README.md docs/index.md && ncp CHANGELOG.md docs/CHANGELOG.md",
+    "switch2": "yarn add vue && vue-demi-switch 2",
+    "switch3": "yarn add vue@next && vue-demi-switch 3"
   },
   "dependencies": {
-    "vue-demi": "^0.11.4"
+    "vue-demi": "^0.12.1"
   },
   "peerDependencies": {
-    "@vue/composition-api": "^1.2.4",
+    "@vue/composition-api": "^1.4.0",
     "vue": "^2.0.0 || >=3.0.0"
   },
   "peerDependenciesMeta": {
@@ -31,24 +40,25 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^16.11.4",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/compiler-sfc": "3.2.20",
-    "eslint": "^8.1.0",
+    "@types/node": "^16.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vitejs/plugin-vue": "^1.10.0",
+    "@vue/compiler-sfc": "^3.2.22",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.20.0",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.3",
+    "lint-staged": "^12.1.2",
+    "ncp": "^2.0.0",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.10",
-    "vitepress": "^0.20.0",
-    "vue": "^3.2.20",
-    "vue-tsc": "^0.3.0",
-    "vue2": "npm:vue@2"
+    "typescript": "^4.5.2",
+    "vite": "^2.6.14",
+    "vite-plugin-vue2": "^1.9.0",
+    "vitepress": "^0.20.1",
+    "vue": "^3.2.22",
+    "vue-tsc": "^0.29.6"
   },
   "lint-staged": {
     "*.{ts,vue}": [
