--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.10.0",
     "@vue/compiler-sfc": "^3.2.22",
+    "@vue/composition-api": "^1.4.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -57,7 +58,8 @@
     "vite": "^2.6.14",
     "vite-plugin-vue2": "^1.9.0",
     "vitepress": "^0.20.1",
-    "vue": "^3.2.22",
+    "vue": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
     "vue-tsc": "^0.29.6"
   },
   "lint-staged": {
