--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "vue-demi": "^0.12.1"
   },
   "peerDependencies": {
-    "@vue/composition-api": "^1.4.0",
+    "@vue/composition-api": "^1.4.3",
     "vue": "^2.0.0 || >=3.0.0"
   },
   "peerDependenciesMeta": {
@@ -40,33 +40,41 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^16.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vitejs/plugin-vue": "^1.10.0",
-    "@vue/compiler-sfc": "^3.2.22",
-    "@vue/composition-api": "^1.4.0",
-    "eslint": "^8.3.0",
+    "@commitlint/cli": "^16.0.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@types/node": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vue/compiler-sfc": "^3.2.26",
+    "@vue/composition-api": "^1.4.3",
+    "conventional-changelog-cli": "^2.2.2",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^7.20.0",
+    "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.1.2",
+    "lint-staged": "^12.1.4",
     "ncp": "^2.0.0",
-    "prettier": "^2.4.1",
-    "typescript": "^4.5.2",
-    "vite": "^2.6.14",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.7",
     "vite-plugin-vue2": "^1.9.0",
-    "vitepress": "^0.20.1",
-    "vue": "^3.2.22",
+    "vitepress": "^0.20.10",
+    "vue": "^3.2.26",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.29.6"
+    "vue-tsc": "^0.30.1"
   },
   "lint-staged": {
     "*.{ts,vue}": [
       "prettier --write",
       "eslint --fix",
       "git add"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
     ]
   }
 }
