refactor: refactor sciprts and add vitest

--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   "types": "lib/index.d.ts",
   "keywords": [],
   "scripts": {
-    "dev": "esno scripts/dev.ts",
-    "dev2": "esno scripts/dev.ts -v2",
-    "build": "esno scripts/build.ts",
-    "serve": "vite preview",
-    "docs:dev": "esno scripts/docs.ts -d",
-    "docs:build": "esno scripts/docs.ts -b",
-    "docs:serve": "esno scripts/docs.ts -s",
+    "dev": "yarn dev:3",
+    "dev:3": "yarn switch:3 && vite",
+    "dev:2": "yarn switch:2 && vite",
+    "build": "yarn switch:3 && yarn vtsc && vite build",
+    "serve": "yarn switch:3 && vite preview",
+    "docs:dev": "yarn switch:3 && vitepress dev docs",
+    "docs:build": "yarn switch:3 && vitepress build docs",
+    "docs:serve": "yarn switch:3 && vitepress serve docs",
+    "test": "yarn switch:3 && vitest",
+    "test:2": "yarn switch:2 && vitest run",
+    "test:3": "yarn switch:3 && vitest run",
+    "test:all": "yarn test:2 && yarn test:3",
+    "switch:2": "esno scripts/switch.ts 2",
+    "switch:3": "esno scripts/switch.ts 3",
     "release": "esno scripts/release.ts",
+    "vtsc": "vue-tsc --noEmit",
     "prepare": "husky install",
     "lint": "eslint --ext .ts,.vue .",
-    "changelog:init": "esno scripts/changelog.ts -init"
+    "changelog:init": "esno scripts/changelog.ts init"
   },
   "dependencies": {
     "vue-demi": "^0.12.5"
@@ -44,20 +52,23 @@
     "@vitejs/plugin-vue": "^2.3.2",
     "@vue/compiler-sfc": "^3.2.33",
     "@vue/composition-api": "^1.6.0",
+    "@vue/test-utils": "^2.0.0-rc.21",
     "conventional-changelog-cli": "^2.2.2",
     "enquirer": "^2.3.6",
-    "eslint": "^8.14.0",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "esno": "^0.14.1",
     "husky": "^7.0.4",
+    "jsdom": "^19.0.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.8",
     "vite-plugin-vue2": "^1.9.3",
-    "vitepress": "^0.22.3",
+    "vitepress": "^0.22.4",
+    "vitest": "^0.10.5",
     "vue": "^3.2.33",
     "vue-template-compiler": "^2.6.14",
     "vue-tsc": "^0.34.11"
