--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "paths": {
       "@/*": ["src/*"],
       "~/*": ["packages/*"]
-    }
+    },
+    "types": ["vitest", "vitest/globals"]
   },
   "include": [
     "src/**/*.ts",
@@ -25,6 +26,8 @@
     "packages/**/*.vue",
     "docs/.vitepress/**/*.ts",
     "docs/.vitepress/**/*.d.ts",
-    "docs/.vitepress/**/*.vue"
+    "docs/.vitepress/**/*.vue",
+    "test/**/*.ts",
+    "test/**/*.test.ts"
   ]
 }
