--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
   "scripts": {
     "dev": "yarn switch:3 && vite",
     "dev:2": "yarn switch:2 && vite",
-    "build": "yarn switch:3 && vite build",
+    "build": "yarn switch:3 && vite build && yarn build:types && yarn build:globals",
+    "build:types": "vue-tsc --project tsconfig.d.json --declaration --emitDeclarationOnly --outDir lib",
+    "build:globals": "esno scripts/globals.ts",
     "serve": "yarn switch:3 && vite preview",
-    "docs:dev": "yarn switch:3 && vitepress dev docs",
-    "docs:build": "yarn switch:3 && vitepress build docs",
-    "docs:serve": "yarn switch:3 && vitepress serve docs",
-    "test": "yarn switch:3 && vitest",
+    "docs:dev": "yarn switch:3 && yarn docs:copy && vitepress dev docs",
+    "docs:build": "yarn switch:3 && yarn docs:copy && vitepress build docs",
+    "docs:serve": "yarn switch:3 && yarn docs:copy && vitepress serve docs",
+    "docs:copy": "esno scripts/docs-copy.ts",
+    "test": "vitest",
     "test:2": "yarn switch:2 && vitest run",
     "test:3": "yarn switch:3 && vitest run",
     "test:all": "yarn test:2 && yarn test:3",
+    "test:coverage": "vitest --coverage",
     "switch:2": "esno scripts/switch.ts 2",
     "switch:3": "esno scripts/switch.ts 3",
     "release": "esno scripts/release.ts",
     "precommit": "esno scripts/precommit.ts",
-    "vtsc": "vue-tsc --noEmit",
+    "typecheck": "vue-tsc --noEmit",
     "prepare": "husky install",
-    "lint": "eslint --ext .ts,.vue .",
-    "changelog:init": "esno scripts/changelog.ts init"
+    "lint": "eslint --ext .ts,.vue ."
   },
   "dependencies": {
     "vue-demi": "^0.12.5"
@@ -53,6 +56,8 @@
     "@vue/compiler-sfc": "^3.2.33",
     "@vue/composition-api": "^1.6.0",
     "@vue/test-utils": "^2.0.0-rc.21",
+    "@vue/tsconfig": "^0.1.3",
+    "c8": "^7.11.2",
     "conventional-changelog-cli": "^2.2.2",
     "enquirer": "^2.3.6",
     "eslint": "^8.15.0",
@@ -60,18 +65,18 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "esno": "^0.14.1",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "jsdom": "^19.0.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.8",
-    "vite-plugin-vue2": "^1.9.3",
+    "vite-plugin-vue2": "^2.0.0",
     "vitepress": "^0.22.4",
-    "vitest": "^0.10.5",
+    "vitest": "^0.12.3",
     "vue": "^3.2.33",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.34.11"
+    "vue-tsc": "^0.34.12"
   },
   "lint-staged": {
     "*.{ts,vue}": [
