--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         run: yarn
 
       - name: Typecheck
-        run: yarn vtsc
+        run: yarn typecheck
 
       - name: Test Vue3
         run: yarn test:3
