--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "release": "esno scripts/release.ts",
     "precommit": "esno scripts/precommit.ts",
     "typecheck": "vue-tsc --noEmit",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "prepare": "husky install",
     "lint": "eslint --ext .ts,.vue ."
   },
