refactor: move .vitepress to packages

--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,16 @@
 .github
 .husky
-docs
 node_modules
 public
 scripts
 src
+.eslintignore
 .eslintrc.js
 .gitignore
+.npmignore
 .prettierrc.js
 index.html
+tsconfig.d.json
 tsconfig.json
 vite.config.ts
 yarn.lock
