--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "build": "yarn switch:3 && vite build && yarn build:types",
     "build:types": "vue-tsc --project tsconfig.d.json --declaration --emitDeclarationOnly --outDir lib",
     "serve": "yarn switch:3 && vite preview",
-    "docs:dev": "yarn switch:3 && yarn docs:copy && vitepress dev docs",
-    "docs:build": "yarn switch:3 && yarn docs:copy && vitepress build docs",
-    "docs:serve": "yarn switch:3 && yarn docs:copy && vitepress serve docs",
+    "docs:dev": "yarn switch:3 && yarn docs:copy && vitepress dev packages",
+    "docs:build": "yarn switch:3 && yarn docs:copy && vitepress build packages",
+    "docs:serve": "yarn switch:3 && yarn docs:copy && vitepress serve packages",
     "docs:copy": "esno scripts/docs-copy.ts",
     "test": "vitest",
     "test:2": "yarn switch:2 && vitest run",
