--- a/tsconfig.d.json
+++ b/tsconfig.d.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
   "include": ["packages/**/*.ts"],
-  "exclude": ["packages/**/*.test.ts"]
+  "exclude": ["packages/**/demo/*", "packages/**/test/*"]
 }
