--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           access_token: ${{ secrets.ACCESS_TOKEN }}
           branch: gh-pages
-          folder: docs/.vitepress/dist
+          folder: packages/.vitepress/dist
