--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "paths": {
       "@/*": ["src/*"],
       "~/*": ["packages/*"],
-      "vite-lib-starter": ["./packages"]
+      "vite-lib-starter": ["packages"]
     },
     "types": ["vitest/globals"]
   },
