--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-lib-starter",
   "version": "0.3.2",
+  "upperName": "ViteLibStarter",
   "description": "vite-lib-starter",
   "author": "SoulLyoko <519052532@qq.com>",
   "repository": "https://github.com/SoulLyoko/vite-lib-starter.git",
@@ -8,13 +9,14 @@
   "private": false,
   "license": "MIT",
   "files": [
+    "es",
     "lib",
     "global.d.ts"
   ],
-  "main": "lib/index.umd.js",
-  "module": "lib/index.es.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/index.js",
   "style": "lib/style.css",
+  "module": "es/index.js",
+  "types": "es/index.d.ts",
   "exports": {
     ".": {
       "import": "./lib/index.es.js",
@@ -30,7 +32,7 @@
     "dev": "yarn switch:3 && vite",
     "dev:2": "yarn switch:2 && vite",
     "build": "yarn switch:3 && vite build && yarn build:types && yarn build:global",
-    "build:types": "vue-tsc --project tsconfig.d.json --declaration --emitDeclarationOnly --outDir lib",
+    "build:types": "vue-tsc --project tsconfig.d.json --declaration --emitDeclarationOnly --outDir es",
     "build:global": "esno scripts/global.ts",
     "serve": "yarn switch:3 && vite preview",
     "docs:dev": "yarn switch:3 && vitepress dev packages",
@@ -65,6 +67,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -81,6 +84,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "esno": "^0.15.0",
+    "fs-extra": "^10.1.0",
     "husky": "^8.0.1",
     "jsdom": "^19.0.0",
     "lint-staged": "^12.4.1",
