--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "starter"
   ],
   "files": [
+    "dist",
     "es",
     "lib",
     "global.d.ts"
@@ -28,7 +29,8 @@
     ".": {
       "import": "./es/index.js",
       "require": "./lib/index.js"
-    }
+    },
+    "./*": "./*"
   },
   "scripts": {
     "dev": "yarn switch:3 && vite",
