--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lint": "eslint --ext .ts,.vue ."
   },
   "dependencies": {
-    "vue-demi": "^0.12.5"
+    "vue-demi": "^0.13.1"
   },
   "peerDependencies": {
     "@vue/composition-api": "^1.6.0",
@@ -68,25 +68,25 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
-    "@types/node": "^17.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
+    "@types/node": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/compiler-sfc": "^3.2.33",
-    "@vue/composition-api": "^1.6.1",
-    "@vue/test-utils": "^2.0.0-rc.21",
+    "@vue/composition-api": "^1.6.2",
+    "@vue/test-utils": "^2.0.0",
     "@vue/tsconfig": "^0.1.3",
     "c8": "^7.11.3",
     "conventional-changelog-cli": "^2.2.2",
     "enquirer": "^2.3.6",
-    "eslint": "^8.15.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^9.0.1",
+    "eslint-plugin-vue": "^9.1.0",
     "esno": "^0.16.3",
     "fs-extra": "^10.1.0",
     "gulp": "^4.0.2",
@@ -95,17 +95,17 @@
     "gulp-sass": "^5.1.0",
     "husky": "^8.0.1",
     "jsdom": "^19.0.0",
-    "lint-staged": "^12.4.1",
+    "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
-    "sass": "^1.51.0",
-    "typescript": "^4.6.4",
+    "sass": "^1.52.1",
+    "typescript": "^4.7.2",
     "vite": "^2.9.8",
     "vite-plugin-vue2": "^2.0.1",
     "vitepress": "^0.22.4",
-    "vitest": "^0.12.6",
-    "vue": "^3.2.33",
+    "vitest": "^0.13.1",
+    "vue": "^3.2.36",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.34.15"
+    "vue-tsc": "^0.35.2"
   },
   "lint-staged": {
     "*.{ts,vue}": [
