--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lint": "eslint --ext .ts,.vue ."
   },
   "dependencies": {
+    "eslint-plugin-import": "^2.26.0",
     "vue-demi": "^0.13.1"
   },
   "peerDependencies": {
