--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dev": "yarn switch:3 && vite",
     "dev:2": "yarn switch:2 && vite",
     "build": "yarn switch:3 && yarn typecheck && vite build",
+    "build:global": "esno scripts/global.ts",
     "postbuild": "esno scripts/postbuild.ts",
     "serve": "yarn switch:3 && vite preview",
     "docs:dev": "yarn switch:3 && vitepress dev packages",
@@ -73,7 +74,7 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
-    "@types/node": "^17.0.42",
+    "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -97,16 +98,16 @@
     "husky": "^8.0.1",
     "jsdom": "^19.0.0",
     "lint-staged": "^13.0.1",
-    "prettier": "^2.7.0",
+    "prettier": "^2.7.1",
     "sass": "^1.52.3",
     "typescript": "^4.7.3",
     "vite": "^2.9.12",
     "vite-plugin-vue2": "^2.0.1",
     "vitepress": "^0.22.4",
-    "vitest": "^0.14.2",
+    "vitest": "^0.15.1",
     "vue": "^3.2.37",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.37.5"
+    "vue-tsc": "^0.37.9"
   },
   "lint-staged": {
     "*.{ts,vue}": [
