--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "release": "esno scripts/release.ts",
     "typecheck": "vue-tsc --noEmit",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "ci": "yarn typecheck && yarn test:all && yarn build && yarn docs:build",
+    "ci": "yarn typecheck && yarn test:all && yarn docs:build && vite build",
     "prepare": "husky install",
     "lint": "eslint --ext .ts,.vue ."
   },
@@ -100,6 +100,7 @@
     "lint-staged": "^13.0.1",
     "prettier": "^2.7.1",
     "sass": "^1.52.3",
+    "tsc-alias": "^1.6.11",
     "typescript": "^4.7.3",
     "vite": "^2.9.12",
     "vite-plugin-vue2": "^2.0.1",
