--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
   },
   "dependencies": {
     "eslint-plugin-import": "^2.26.0",
-    "vue-demi": "^0.13.1"
+    "vue-demi": "^0.13.8"
   },
   "peerDependencies": {
-    "@vue/composition-api": "^1.6.0",
+    "@vue/composition-api": "^1.7.0",
     "vue": "^2.6.0 || ^3.2.0"
   },
   "peerDependenciesMeta": {
@@ -70,25 +70,26 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.2",
-    "@commitlint/config-conventional": "^17.0.2",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@types/node": "^18.7.8",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "@vitejs/plugin-vue": "^2.3.4",
+    "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/compiler-sfc": "^3.2.37",
-    "@vue/composition-api": "^1.6.2",
-    "@vue/test-utils": "^2.0.0",
+    "@vue/composition-api": "^1.7.0",
+    "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "c8": "^7.11.3",
+    "c8": "^7.12.0",
     "conventional-changelog-cli": "^2.2.2",
     "enquirer": "^2.3.6",
-    "eslint": "^8.18.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^9.1.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.3.0",
     "esno": "^0.16.3",
     "fs-extra": "^10.1.0",
     "gulp": "^4.0.2",
@@ -97,18 +98,17 @@
     "gulp-sass": "^5.1.0",
     "husky": "^8.0.1",
     "jsdom": "^20.0.0",
-    "lint-staged": "^13.0.2",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "sass": "^1.53.0",
-    "tsc-alias": "^1.6.11",
+    "sass": "^1.54.5",
+    "tsc-alias": "^1.7.0",
     "typescript": "^4.7.4",
-    "vite": "^2.9.12",
-    "vite-plugin-vue2": "^2.0.1",
+    "vite": "^2.9.15",
     "vitepress": "^0.22.4",
-    "vitest": "^0.15.2",
+    "vitest": "^0.22.1",
     "vue": "^3.2.37",
-    "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.38.1"
+    "vue-template-compiler": "^2.7.9",
+    "vue-tsc": "^0.40.1"
   },
   "lint-staged": {
     "*.{ts,vue}": [
