fix: vue 2.7 compatible

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "scripts": {
     "dev": "yarn switch:3 && vite",
     "dev:2": "yarn switch:2 && vite",
+    "dev:2.7": "yarn switch:2.7 && vite",
     "build": "yarn switch:3 && yarn typecheck && vite build",
     "build:global": "esno scripts/global.ts",
     "postbuild": "esno scripts/postbuild.ts",
@@ -44,15 +45,17 @@
     "docs:serve": "yarn switch:3 && vitepress serve packages",
     "test": "vitest",
     "test:2": "yarn switch:2 && vitest run",
+    "test:2.7": "yarn switch:2.7 && vitest run",
     "test:3": "yarn switch:3 && vitest run",
-    "test:all": "yarn test:2 && yarn test:3",
+    "test:all": "yarn test:2 && yarn test:2.7 && yarn test:3",
     "test:coverage": "vitest --coverage",
     "switch:2": "esno scripts/switch.ts 2",
+    "switch:2.7": "esno scripts/switch.ts 2.7",
     "switch:3": "esno scripts/switch.ts 3",
     "release": "esno scripts/release.ts",
     "typecheck": "vue-tsc --noEmit",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "ci": "yarn typecheck && yarn test:all && yarn docs:build && vite build",
+    "ci": "vite build && yarn docs:build && yarn test:all",
     "prepare": "husky install",
     "lint": "eslint --ext .ts,.vue ."
   },
@@ -104,6 +107,7 @@
     "tsc-alias": "^1.7.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.15",
+    "vite-plugin-vue2": "^2.0.1",
     "vitepress": "^0.22.4",
     "vitest": "^0.22.1",
     "vue": "^3.2.37",
