--- a/package.json
+++ b/package.json
@@ -72,47 +72,47 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@types/fs-extra": "^9.0.13",
-    "@types/gulp": "^4.0.9",
-    "@types/node": "^18.7.21",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "@vitejs/plugin-vue": "^2.3.4",
-    "@vitejs/plugin-vue2": "^1.1.2",
-    "@vue/compiler-sfc": "^3.2.37",
+    "@types/gulp": "^4.0.10",
+    "@types/node": "^18.11.12",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue2": "^2.1.0",
+    "@vue/compiler-sfc": "^3.2.45",
     "@vue/composition-api": "^1.7.0",
-    "@vue/test-utils": "^2.0.2",
+    "@vue/test-utils": "^2.2.6",
     "@vue/tsconfig": "^0.1.3",
     "c8": "^7.12.0",
     "conventional-changelog-cli": "^2.2.2",
     "enquirer": "^2.3.6",
-    "eslint": "^8.24.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.5.1",
+    "eslint-plugin-vue": "^9.8.0",
     "esno": "^0.16.3",
-    "fs-extra": "^10.1.0",
+    "fs-extra": "^11.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-sass": "^5.1.0",
-    "husky": "^8.0.1",
-    "jsdom": "^20.0.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
+    "husky": "^8.0.2",
+    "jsdom": "^20.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
     "sass": "^1.55.0",
-    "tsc-alias": "^1.7.0",
-    "typescript": "^4.8.3",
-    "vite": "^2.9.15",
+    "tsc-alias": "^1.8.2",
+    "typescript": "^4.9.4",
+    "vite": "^3.2.5",
     "vite-plugin-vue2": "^2.0.2",
-    "vitepress": "^0.22.4",
-    "vitest": "^0.23.4",
-    "vue": "^3.2.39",
-    "vue-template-compiler": "^2.7.10",
-    "vue-tsc": "^0.40.13"
+    "vitepress": "1.0.0-alpha.30",
+    "vitest": "^0.25.6",
+    "vue": "^3.2.45",
+    "vue-template-compiler": "^2.7.14",
+    "vue-tsc": "^1.0.12"
   },
   "lint-staged": {
     "*.{ts,vue}": [
