--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,15 +2,15 @@ name: NPM Publish
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Install and Build
+      - name: Build Packages
         run: |
           yarn 
           yarn build
@@ -18,4 +18,4 @@ jobs:
       - name: Publish
         uses: JS-DevTools/npm-publish@v1
         with:
-          token: ${{ secrets.NPM_ACCESS_TOKEN }}
+          token: ${{ secrets.NPM_TOKEN }}
