--- a/package.json
+++ b/package.json
@@ -33,31 +33,30 @@
     "./*": "./*"
   },
   "scripts": {
+    "build": "yarn switch:3 && yarn typecheck && esno scripts/build.ts",
+    "build:global": "esno scripts/global.ts",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "ci": "yarn build && yarn docs:build && yarn test:all",
     "dev": "yarn switch:3 && vite",
     "dev:2": "yarn switch:2 && vite",
     "dev:2.7": "yarn switch:2.7 && vite",
-    "build": "yarn switch:3 && yarn typecheck && vite build",
-    "build:global": "esno scripts/global.ts",
-    "postbuild": "esno scripts/postbuild.ts",
-    "serve": "yarn switch:3 && vite preview",
     "docs:dev": "yarn switch:3 && vitepress dev packages",
     "docs:build": "yarn switch:3 && vitepress build packages",
     "docs:serve": "yarn switch:3 && vitepress serve packages",
+    "lint": "eslint --ext .ts,.vue .",
+    "prepare": "husky install",
+    "release": "bump && esno scripts/release.ts",
+    "serve": "yarn switch:3 && vite preview",
+    "switch:2": "esno scripts/switch.ts 2",
+    "switch:2.7": "esno scripts/switch.ts 2.7",
+    "switch:3": "esno scripts/switch.ts 3",
     "test": "vitest",
     "test:2": "yarn switch:2 && vitest run",
     "test:2.7": "yarn switch:2.7 && vitest run",
     "test:3": "yarn switch:3 && vitest run",
     "test:all": "yarn test:2 && yarn test:2.7 && yarn test:3",
     "test:coverage": "vitest --coverage",
-    "switch:2": "esno scripts/switch.ts 2",
-    "switch:2.7": "esno scripts/switch.ts 2.7",
-    "switch:3": "esno scripts/switch.ts 3",
-    "release": "esno scripts/release.ts",
-    "typecheck": "vue-tsc --noEmit",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "ci": "vite build && yarn docs:build && yarn test:all",
-    "prepare": "husky install",
-    "lint": "eslint --ext .ts,.vue ."
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "vue-demi": "^0.13.10"
@@ -74,6 +73,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@jsdevtools/version-bump-prompt": "^6.1.0",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.10",
     "@types/node": "^18.11.12",
@@ -87,7 +87,6 @@
     "@vue/tsconfig": "^0.1.3",
     "c8": "^7.12.0",
     "conventional-changelog-cli": "^2.2.2",
-    "enquirer": "^2.3.6",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
