--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "lib": ["es2017", "dom"],
+    "lib": ["esnext", "dom"],
     "paths": {
       "@/*": ["src/*"],
       "~/*": ["packages/*"],
